--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,4 @@
+
 allprojects {
     repositories {
         google()
@@ -15,4 +16,8 @@ subprojects {
 
 tasks.register("clean", Delete) {
     delete rootProject.buildDir
+}
+
+dependencies {
+    
 }
