--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 23.11.0
 
 environment:
   sdk: '>=3.3.3 <4.0.0'
@@ -57,6 +57,7 @@ dependencies:
   url_launcher: ^6.2.6 # open url
   google_fonts: ^6.2.1
   flutter_launcher_icons: ^0.13.1
+  firebase_core: ^2.30.1
 
 dev_dependencies:
   flutter_test:
@@ -85,6 +86,7 @@ flutter:
     - assets/icon/
     - assets/lottie/
     - assets/images/
+ 
 
 
 flutter_launcher_icons:
