--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 23.11.0
+version: 23.09.00
 
 environment:
   sdk: '>=3.3.3 <4.0.0'
@@ -58,6 +58,8 @@ dependencies:
   google_fonts: ^6.2.1
   flutter_launcher_icons: ^0.13.1
   firebase_core: ^2.30.1
+  connectivity: ^3.0.6
+  connectivity_plus: ^6.0.3
 
 dev_dependencies:
   flutter_test:
@@ -84,6 +86,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/icon/
+    - assets/icons/
     - assets/lottie/
     - assets/images/
  
